# sbpeye

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.py
chroma_db/695bd1f1-9b23-4da6-824a-c2352279a2d5/: index_metadata.pickle
chroma_db/eb9e635c-a20b-4763-ab73-45927f642ab1/: index_metadata.pickle
docs/: LAWS_REGULATIONS_PLAN.md
docs/superpowers/plans/: 2026-07-05-circular-pinning-and-selection-mode.md
docs/superpowers/specs/: 2026-07-05-circular-pinning-and-selection-mode-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: about.html
frontend/src/: App.vue  main.ts  premium.css  styles.css
frontend/src/components/: CircularDetailPane.vue  CircularGraph.vue  CircularResultContent.vue  ConsolidatedView.vue  PdfPreviewDialog.vue  SbpNewsPanel.vue  StateBlock.vue
frontend/src/lib/: api.ts  useResizablePane.ts
frontend/src/router/: index.ts
frontend/src/views/: ChatView.vue  CircularDetailView.vue  Home.vue  (+6 more)
src/sbpeye/: ai.py  chat_retrieval.py  checklist.py  checklist_export.py  circular_ai.py  consolidation.py  database.py  documents.py  embeddings.py  env.py  link_routing.py  main.py  migration.py  models.py  search.py  supersession.py
tests/: conftest.py  test_annexure.py  test_attachments.py  test_chat_retrieval.py  test_checklist.py  test_checklist_export.py  test_cli_batch.py  test_consolidation.py  test_document_links.py  test_metric_resolver.py  test_redesign.py  test_routes_registered.py  test_routes_smoke.py  test_search_fts.py
(+26 files in other folders)
