[project]
name = "sbpeye"
version = "0.2.0"
description = "Independent SBP Circulars & EcoData Indexer with AI-powered analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "click>=8.1.0",
    "cloudscraper",
    "docling>=2.104.0,<3",
    "fastapi>=0.136.3",
    "fastembed>=0.7.4",
    "onnxruntime>=1.26.0",
    "jinja2>=3.1.6",
    "openai>=2.38.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.29",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.scripts]
sbpeye = "sbpeye.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbpeye"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
